Overflow fix

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -33,8 +33,7 @@
     margin: 100px;
   }
   .feature-list-image {
-    max-width: 537px;
-    max-height: 500px;
+    max-width: 100%;
   }
 }
 
@@ -55,6 +54,7 @@
   }
   .discover-image {
     max-height: 500px;
+    max-width: 100%;
   }
 }
 
