--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -39,6 +39,7 @@
   }
 
   .features-list {
+    overflow: hidden;
     .feature-list-left {
       max-width: 90%;
       h3 {
